bluedeployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sarika-blue-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blueapp
  template:
    metadata:
      labels:
        app: blueapp
    spec:
      containers:
        - name: blueapp
          image: sarika143/anjan:b
          imagePullPolicy: IfNotPresent
          ports:
            - name: web
              containerPort: 80
              protocol: TCP
