greenservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: green-service
spec:
  type: ClusterIP
  selector:
    app: greenapp
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
